2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a typo.

	* doc/examples/box2d-bbox.cc,
	* doc/examples/split/box2d-bbox-1.cc.raw: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Add an illustration in Milena documentation.

	* doc/Makefile.am: Add new png figures.

	* doc/img/src/2dgrid.tikz,
	* doc/img/src/standalone.cfg,
	* doc/img/src/standalone.cls,
	* doc/img/src/ydoc.cfg,
	* doc/img/src/ydoc.cls: New.

	* doc/ref-guide.tex: Include tikz output.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	More improvements in documentation layout.

	* doc/Doxyfile.in: Do not show namespaces in names.

	* doc/DoxygenLayout.xml: Improve menu.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Tag internal documentation.

	* apps/graph-morpho/morpho.hh,
	* mln/accu/internal/couple.hh,
	* mln/core/box_runend_piter.hh,
	* mln/core/box_runstart_piter.hh,
	* mln/core/concept/delta_point_site.hh,
	* mln/core/concept/dpoint.hh,
	* mln/core/concept/function.hh,
	* mln/core/concept/gdpoint.hh,
	* mln/core/concept/meta_accumulator.hh,
	* mln/core/concept/neighborhood.hh,
	* mln/core/concept/pseudo_site.hh,
	* mln/core/concept/site.hh,
	* mln/core/concept/site_proxy.hh,
	* mln/core/concept/site_set.hh,
	* mln/core/dpoints_pixter.hh,
	* mln/core/dpsites_piter.hh,
	* mln/core/image/ch_piter.hh,
	* mln/core/image/complex_image.hh,
	* mln/core/image/complex_neighborhood_piter.hh,
	* mln/core/image/complex_window_piter.hh,
	* mln/core/image/dmorph/extended.hh,
	* mln/core/image/dmorph/extension_fun.hh,
	* mln/core/image/dmorph/extension_ima.hh,
	* mln/core/image/dmorph/extension_val.hh,
	* mln/core/image/dmorph/hexa.hh,
	* mln/core/image/dmorph/hexa_piter.hh,
	* mln/core/image/dmorph/image2d_h.hh,
	* mln/core/image/dmorph/image_if.hh,
	* mln/core/image/dmorph/p2p_image.hh,
	* mln/core/image/dmorph/slice_image.hh,
	* mln/core/image/dmorph/sub_image.hh,
	* mln/core/image/dmorph/sub_image_if.hh,
	* mln/core/image/dmorph/transformed_image.hh,