@@ -1,4 +1,4 @@
-  for (def::coord row = geom::min_row(lena); row < geom::max_row(lena); ++row)
-    for (def::coord col = geom::min_row(lena); col < geom::max_col(lena); ++col)
+  for (def::coord row = geom::min_row(lena); row <= geom::max_row(lena); ++row)
+    for (def::coord col = geom::min_row(lena); col <= geom::max_col(lena); ++col)
       if (((row + col) % 2) == 0)
         opt::at(lena, row, col) = literal::green;
